# FrenchPolitic

./: .gitignore  App.tsx  CLAUDE.md  MVP_Assemblee_Nationale_v2.md  README.md  app.json  idees_prompt.txt  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
backend/: .env.example  .python-version  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/ai/: faits.py  gabarit.py  generation.py  guardrails.py  llm.py  prompts.py  questions.py  rag.py  review_queue.py  theme.py
backend/app/api/: deps.py
backend/app/api/routes/: deputes.py  dossiers.py  health.py  scrutins.py
backend/app/data/: seed.py
backend/app/db/: base.py  models.py  session.py
backend/app/domain/: enums.py
backend/app/ingestion/: amendements.py  assemblee.py  debats.py  deputes.py  dossiers_legislatifs.py  legifrance.py  normalize.py  organes.py  run.py  sync.py  textes_an.py  textes_senat.py
backend/app/repositories/: __init__.py  base.py  memory.py  postgres.py
backend/app/schemas/: __init__.py  depute.py  scrutin.py
backend/app/utils/: text.py
backend/tests/: conftest.py  test_amendements.py  test_api.py  test_assemblee_download.py  test_debats.py  test_deputes.py  test_generation.py  test_guardrails.py  test_ingestion.py  test_llm.py  test_postgres_repo.py  test_questions.py  test_textes_an.py  test_textes_senat.py  test_theme.py
src/api/: cache.ts  client.ts  config.ts  deputes.ts  dossiers.ts  index.ts
src/components/: AiNotice.tsx  AmendementRow.tsx  AmendementsSection.tsx  Avatar.tsx  (+24 more)
(+33 files in other folders)
